Style fix for side gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -496,7 +496,7 @@ header.fixHeader .header {
 .abs-div1 {
     left: 0%;
     top: 3%;
-    width: 99%;
+    width: 100%;
     height: 46%;
 }
 
